--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <img src="https://www.kudan-japanese-school.com/img/cookingclass/header.jpg" class="img-thumbnail" alt="" />
     </div>
   </header>
+  <!-- content -->
 
   <div class="container">
     <h1>Meal Finder</h1>
@@ -30,40 +31,39 @@
           <i class="fa fa-search"></i>
       </form>
       <button class="random-btn" id="random">
-        <i class="fas fa-random"></i>
+        <i class="fas fa-search"></i>
       </button>
     </div>
+    <div id="contentfromapi">
+      <div id="result-heading"></div>
+      <div id="meals" class="meals"></div>
+      <div id="single-meal"></div>
+    </div>
 
-    <div id="result-heading"></div>
-    <div id="meals" class="meals"></div>
-    <div id="single-meal"></div>
-
-
-    <!-- Footer -->
-    <footer class="page-footer font-small blue">
-
-      <!-- Copyright -->
-      <div class="footer-copyright text-center py-3">©️ 2020 Copyright:
-        <a href="https://github.com/"> Mizuchi</a>
-      </div>
-      <!-- Copyright -->
-
-
-      <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
-        </script>
-      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-        </script>
-      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
-        </script>
-
-      <!--Script javascript-->
-      <script src="./assets/js/index.js"></script>
-    </footer>
   </div>
+
+  <!-- Footer -->
+  <footer class="page-footer font-small blue fixed-bottom">
+
+    <!-- Copyright -->
+    <div class="footer-copyright text-center py-3">©️ 2020 Copyright:
+      <a href="https://github.com/"> Mizuchi</a>
+    </div>
+    <!-- Copyright -->
+
+
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+      integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
+      </script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+      </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
+      </script>
+
+    <!--Script javascript-->
+    <script src="./assets/js/index.js"></script>
+  </footer>
 </body>
-
-
 </html>
