--- a/login.html
+++ b/login.html
@@ -79,7 +79,7 @@
       </div>
     </div>
     <!-- Footer -->
-    <footer class="page-footer font-small blue">
+    <footer class="page-footer font-small blue fixed-bottom">
       <!-- Copyright -->
       <div class="footer-copyright text-center py-3">
         ©️ 2020 Copyright:
