--- a/register.html
+++ b/register.html
@@ -61,7 +61,7 @@
     </div>
 
     <!-- Footer -->
-    <footer class="page-footer font-small blue">
+    <footer class="page-footer font-small blue fixed-bottom">
 
         <!-- Copyright -->
         <div class="footer-copyright text-center py-3">©️ 2020 Copyright:
